# bitgn-ecom-a-agent

./: .env.example  .gitignore  README.md  agent.py  cluster_tools.py  config.py  main.py  pyproject.toml  verify.py  workspace.py
Skills/: ecom.md  presubmit.md
res/: architecture.md  architecture.mmd
