[project]
name = "bitgn-ecom-a-agent"
version = "0.1.0"
description = "Runnable A-Agent for the BitGN ECOM benchmark"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.74.1",
    "bitgn-api-connectrpc-python==0.10.0.1.20260508124000+434a5d933432",
    "bitgn-api-protocolbuffers-python==34.1.0.1.20260508124000+434a5d933432",
    "cerebras-cloud-sdk>=1.53.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.1",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
# AICODE-NOTE: `harness_core/scripts/sdk-python.sh` rewrites the Buf SDK pins
# in this file after `buf push`; keep this project flat so the sample stays
# runnable without packaging ceremony.
# AICODE-NOTE: ECOM depends on the public runtime modules generated under
# `bitgn.vm.ecom.*`; rerun `make sdk-python` from `harness_core` after pushing
# schema changes that touch `proto_api/bitgn/vm/ecom/ecom.proto`.
package = false
